--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
-/* -------  General Styles ------- */
+/*   General Styles  */
 
 body {
   font-family: "Lato", sans-serif;
+    margin: 0px;
+    height: 100%;
+    width: 100%;
+    padding: 0px;
+    overflow-x: hidden;
+
+}
 }
 
 h2 {
@@ -36,8 +43,12 @@ section.alternate-background {
   max-width: 100%;
   max-height: 100%;
 }
+#ideas .invis-mobile {
+  display: none;
+}
 
-/* ---  Groups & Items --- */
+
+/*   Groups & Items  */
 
 .group {
   display: flex;
@@ -53,12 +64,13 @@ section.alternate-background {
   flex: 2;
 }
 
-/* -------  Navigation ------- */
+/*   Navigation  */
 
 header {
   background-color: #ff385c;
   padding: 20px 20px 0 20px;
   text-align: center;
+  
 }
 
 .logo {
@@ -71,6 +83,8 @@ header nav ul {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-content: center;
+  height: 50px;
 }
 
 header nav ul li {
@@ -88,7 +102,7 @@ header nav ul li a:hover {
   text-decoration: none;
 }
 
-/* -------  Search Form ------- */
+/*   Search Form  */
 form {
   border: 2px solid #ff385c;
   padding: 20px;
@@ -121,13 +135,13 @@ form button {
 }
 
 
-/* ------- About ------- */
+/*  About  */
 #about img {
   padding: 20px 0;
 }
 
 
-/* -------  Footer ------- */
+/*   Footer  */
 
 footer {
   background-color: #ff385c;
@@ -138,25 +152,26 @@ footer p {
   text-align: center;
   padding: 20px;
 }
-/* -------  Media Query ------- */
+/*   Media Query  */
 @media all and (min-width: 480px) {
+
+  .body {
+    margin: 0px;
+    height: 100%;
+    width: 100%;
+    padding: 0px;
+    overflow-x: hidden;
+  }
   .group {
       flex-direction: row;
   }
-  header {
-      padding: 0;
-  }
-}
-
-/*   Media Query - 480px is too small to work for everything without cutting off the header*/
-@media all and (min-width: 800px) {
   header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
   }
   .logo {
-    font-size: 30px;
+    font-size: 50px;
   }
 
   header nav ul li {
@@ -164,6 +179,31 @@ footer p {
   }
 
   /* stay */
+  form {
+    border: 2px solid #ff385c;
+    padding-right: 20px;
+    padding-left:20px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin-right: 0%;
+    margin-left: 0%;
+    
+  }
+  form {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    
+    
+  }
+  form label {
+    display: flex;
+flex-direction: column;
+    margin-top: 20%;
+    margin-left: 0px;
+    
+  } 
+  
  #stay form {
    display: flex;
    flex-wrap: wrap;
@@ -206,8 +246,9 @@ footer p {
   }
 
   #ideas img {
-    width: 350px;
-    padding: 20px;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
   }
 
   #ideas .forests {
